deploy/us-005-repuestos/single/objects/GQ_Dedup_Repuestos_Config__mdt.object
<!--
  US-005 - Custom Metadata Type com os valores D-005-A/B/C (parametrizados, nao hard-coded).
  O Flow le o registro 'Default'. Linha Repuestos NAO entra aqui: e' identificada pelo
  NATIVO LeadLineItem.ItemType (Part/Accessory), conforme decisao de arquitetura.
-->
<CustomObject>
    <label>GQ Dedup Repuestos Config</label>
    <pluralLabel>GQ Dedup Repuestos Config</pluralLabel>
    <fields>
        <fullName>RecurrenceWindowDays__c</fullName>
        <label>Recurrence Window Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeyGranularity__c</fullName>
        <label>Key Granularity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DominantRule__c</fullName>
        <label>Dominant Rule</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FallbackQueuePrefix__c</fullName>
        <label>Fallback Queue Prefix</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>